[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
env_logger.workspace = true
winit= {workspace = true , features = ["rwh_05"]}
vulkano = {workspace = true , features = ["macros"]}
vulkano-shaders = { workspace = true }
anyhow = {workspace = true}


